--- a/src/App.css
+++ b/src/App.css
@@ -44,22 +44,66 @@
   }
 }
 
+.header{
+  width: 100%;
+  height: 10vh;
+  color: white;
+  background-color: #1b3877;
+}
+
+.header h1{
+  text-transform: uppercase;
+}
+
 .card{
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
   border:1px solid black;
-  width:30ch;
-  padding:2rem;
+  width:40ch;
+  border-radius: 5px 5px;
+  box-shadow: 1px 1px 3px 1px #0005;
+  position: relative;
+}
+
+.container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.column{
+  flex-direction: column;
+}
+
+.align-stretch{
+  align-items: stretch;
+}
+
+.align-top{
+  align-items: flex-start;
+}
+
+.gap-md{
   gap:1rem;
-  border-radius: 25px 25px;
-  box-shadow: 1px 1px 5px 3px #0008;
+}
+
+.gap-lg{
+  gap:3rem;
+}
+
+.card-content{
+  padding: 1rem;
+}
+
+.wrap{
+  flex-wrap: wrap;
 }
 
 .card-header{
-  font-size: 2.5rem;
-  text-align: center;
+  font-size: 1.25rem;
+  text-align: left;
   width: 100%;
   color:black;
   text-transform: uppercase;
@@ -67,17 +111,28 @@
 .card-header h2{
   margin:0;
   padding:0;
+  font-weight: 600;
 }
 
 .card-body{
-  font-size: 1.25rem;
+  font-size: 1rem;
   text-align: justify;
   width: 100%;
-  color:#282c34;
+  color: #555;
 }
 
 .card-body p{
   margin:0;
   padding:0;
+  font-weight: 300;
 }
 
+.card-image{
+  width: 100%;
+}
+
+.card-image img{
+  width: 100%;
+  height: 15rem;
+  object-fit: cover;
+}
